tests/files/type_checker_tests/should_pass/066.cmdr
//Test that pre-decrement operations type check
a = [2, 3, 4];
x = 1;
y = --a[x];
