tests/files/type_checker_tests/should_fail/110.cmdr
//Should fail pre-decrement on something of incorrect type
a = [true, false, true];
--a[1];
